--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>プロジェクトエーフィ☆</title>
+    <title>プロジェクトエーフィ</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
 </head>
 
 <header>
-    <h1>プロジェクトエーフィ</h1>
+    <h1>プロジェクトエーフィ☆</h1>
 </header>
 
 <body>
